// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`proxySpy apply/call 1`] = `
Array [
  Array [
    "call",
    "mockName",
    Array [
      1,
      2,
      3,
    ],
  ],
]
`;

exports[`proxySpy apply/method 1`] = `
Array [
  Array [
    "apply",
    "mockName",
    Object {
      "method1": [Spy mockName],
    },
    Array [
      1,
      2,
      3,
    ],
  ],
]
`;

exports[`proxySpy get 1`] = `
Array [
  Array [
    "get",
    "mockName",
    "property1",
  ],
]
`;

exports[`proxySpy set 1`] = `
Array [
  Array [
    "set",
    "mockName",
    "property1",
    1,
  ],
]
`;

exports[`serializeWithSpies is ok with circular structures 1`] = `
Object {
  "obj1": [Circular],
  "obj2": [Circular],
}
`;

exports[`serializeWithSpies is ok with circular structures 2`] = `
Object {
  "obj1": Object {
    "obj1": [Circular],
  },
  "obj2": Object {
    "obj2": [Circular],
  },
}
`;

exports[`serializeWithSpies stringifies spies 1`] = `[Spy A]`;

exports[`serializeWithSpies stringifies spies 2`] = `
Array [
  [Spy B],
  [Spy C],
]
`;
